# wico

./: ssh.yml
.github/workflows/: android.yml  ios.yml  main.yml  ssh_OSX.yml
wico/: CameraScreen.kv  CameraScreen.py  EnterNgIfo.py  MDDataTable.py  MainScreen.py  Manual_input.py  Others.py  OutPutInfo.py  barcode_analysis.py  buildozer.spec  buildozer_ios.spec  db.db  enterngifo.kv  font_definitions.py  main.py  mainscreen.kv  manual_input.kv  mddatatable.kv  others.kv  outputinfo.kv  pyproject.toml  qrreader.py  requirements.txt  search.py  synch.py  version.py  打包apk的过程.md  打包exe.py  数据表结构.xlsx
wico - ios/: CameraScreen.kv  CameraScreen.py  MDDataTable.py  MainScreen.py  Others.py  OutPutInfo.py  buildozer.spec  db.db  enterngifo.kv  others.kv  qrreader.py  requirements.txt  synch.py  扫描依赖库.bat
wico/BQ report/: 2YC不良统计.py  BQ.py  BQ_detail.py  pipenv打包.bat  截图用.py
wico/BQ report/assets/: 2YC电动滑轨.html  df_style.css  test.html
wico/BQ report/server_pi/: BQ_detail.py
wico/BQ report/server_pi/assets/: 2YC电动支架INN.html
wico/BQ_report/: 2YC不良统计.py  BQ.py  BQ.spec  BQ_detail.py  Pipfile  pipenv打包.bat  pyproject.toml  截图用.py
wico/BQ_report/assets/: 2YC电动支架INN.html  2YC电动支架OUT.html  2YC电动滑轨.html  test.html  合计.html
wico/BQ_report/server_pi/: BQ.py  BQ_detail.py
wico/BQ_report/server_pi/assets/: 2YC电动支架OUT.html  合计.html
wico/font/: font_definitions.py
wico/server_pi/: search.py
