[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "camera4kivy==0.3.3",
    "certifi>=2026.1.4",
    "gestures4kivy==0.1.4",
    "kivy==2.2.0",
    "kivymd>=1.2.0",
    "mysql-connector-python>=9.6.0",
    "pillow>=12.1.1",
    "pyzbar>=0.1.9",
    "sentry-sdk>=2.53.0",
]

[tool.uv.sources]
kivymd = { url = "https://github.com/kivymd/KivyMD/archive/refs/tags/1.1.1.zip" }
