[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dash==2.18.0",
    "dash-bootstrap-components==1.6.0",
    "mariadb>=1.1.14",
    "mysql-connector-python>=9.6.0",
    "numpy==1.24.4",
    "pandas==2.0.3",
    "plotly==5.24.0",
]
